# clap-clap

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  build.rs  clap.h  rustfmt.toml
.github/assets/: bindings_darwin-M1_clap123.rs
.github/workflows/: CI-darwin.yml  CI.yml  docs.yml  fmt.yml
clap/: Cargo.toml  README.md
clap-sys/: Cargo.toml
clap/clap-sys/: Cargo.toml  README.md  build.rs  rustfmt.toml  wrapper.h
clap/plugin/: Cargo.toml  README.md
clap/src/: entry.rs  ext.rs  factory.rs  host.rs  id.rs  lib.rs  plugin.rs  process.rs  string_sizes.rs  version.rs
clap/tests/: entry.rs  entry_bundle.rs  factory.rs  host.rs  id.rs  process.rs
examples/: dummy.rs  gain.rs  midi_thru.rs  note_transpose.rs  ping_pong.rs  plugin_template.rs  state.rs
examples/ping-pong/: Cargo.toml
myplug/: Cargo.toml
myplug/src/: lib.rs
plug/: Cargo.toml
plug/clap/: Cargo.toml
plug/src/: lib.rs
plugin/: Cargo.toml  README.md
plugin/src/: lib.rs
src/: audio_buffer.rs  clap.rs  entry.rs  events.rs  ext.rs  factory.rs  ffi.rs  fixedpoint.rs  host.rs  id.rs  lib.rs  params.rs  plugin.rs  plugin_features.rs  process.rs  stream.rs  string_sizes.rs  timestamp.rs  version.rs
src/ext/: audio_ports.rs  host.rs  latency.rs  log.rs  note_ports.rs  params.rs  plugin.rs  state.rs  tail.rs
src/host/: log.rs
src/plugin/: desc.rs  ffi.rs
src/process/: frame.rs
tests/: entry.rs  entry_bundle.rs  process.rs  regressions.rs
tests/basic_integration/: main.rs  process.rs
tests/entry/: dummy.rs  main.rs
tests/factory/: main.rs
tests/host/: bad.rs  dummy.rs  main.rs  test_host.rs
tests/modules/: README.md  id.rs  main.rs  plugin.rs  version.rs
tests/plugin/: dummy.rs
tests/plugin_template/: fixtures.rs  main.rs
tests/process/: frame.rs  main.rs
tests/test-dummy-plugin/: Cargo.toml
tests/test-export-clap-entry/: Cargo.toml  build.rs
tests/test-export-clap-entry/src/: lib.rs
tests/unit/: events.rs  ext.rs  factory.rs  host.rs  id.rs  (+7 more)
(+41 files in other folders)
