[package]
name = "clap-clap"
version = "0.2.0"
rust-version = "1.85.0"
edition = "2024"
description = "CLAP plugin runtime"
license = "MIT"
repository = "https://github.com/mira-merkell/clap-clap"
authors = ["⧉⧉⧉"]

[lib]
crate-type = ["rlib"]

[build-dependencies]
bindgen = "0.71.1"

[[example]]
name = "ping-pong"
crate-type = ["cdylib"]
path = "examples/ping_pong.rs"