[package]
name = "clap-clap"
version = "0.2.1"
rust-version = "1.85.0"
edition = "2024"
description = "CLAP plugin runtime"
license = "MIT"
repository = "https://github.com/mira-merkell/clap-clap"
authors = ["⧉⧉⧉"]

[lib]
crate-type = ["rlib"]

[[example]]
name = "ping-pong"
crate-type = ["cdylib"]
path = "examples/ping_pong.rs"