[package]
name = "clap-clap"
version = "0.3.0"
rust-version = "1.85.0"
edition = "2024"
description = "CLAP plugin runtime"
license = "MIT"
homepage = "https://crates.io/crates/clap-clap"
repository = "https://github.com/mira-merkell/clap-clap"
documentation = "https://docs.rs/clap-clap/latest/clap_clap/"
authors = ["⧉⧉⧉"]

[lib]
crate-type = ["rlib"]

# Examples

[[example]]
name = "gain"
crate-type = ["cdylib"]

[[example]]
name = "note_transpose"
crate-type = ["cdylib"]

[[example]]
name = "plugin_template"
crate-type = ["cdylib"]

[[example]]
name = "state"
crate-type = ["cdylib"]
